# apirena

./: .gitignore  BENCHMARK_ANALYSIS.md  BENCHMARK_ARCHITECTURE_FINAL.md  CONTRIBUTING.md  Cargo.toml  DEEP_DIVE.md  LICENSE  README.md  debug_projects.rs  nx.json  package.json  pnpm-lock.yaml
apps/cli/: Cargo.toml  project.json
apps/cli/src/: main.rs
libs/benchmarks/: Cargo.toml  README.md  project.json
libs/benchmarks/benches/: bench_demo.rs  end_to_end.rs  project_analysis.rs  scalability.rs  simple_test.rs  watcher_micro.rs
libs/benchmarks/projects/large/.pinpath/endpoints/by-file/: enterprise-services-notification-service-server.js.json  enterprise-services-payment-service-server.js.json  enterprise-services-user-service-server.js.json  microservices-product-service.js.json
libs/benchmarks/projects/large/.reqsmith/endpoints/: manifest.json
libs/benchmarks/projects/large/.reqsmith/endpoints/by-file/: enterprise-gateway.js.json  enterprise-services-auth-service-server.js.json  microservices-api-gateway.js.json  microservices-order-service.js.json  microservices-user-service.js.json
libs/benchmarks/projects/large/enterprise/: gateway.js
libs/benchmarks/projects/large/enterprise/.pinpath/endpoints/: manifest.json
libs/benchmarks/projects/large/enterprise/services/auth-service/: server.js
libs/benchmarks/projects/large/enterprise/services/notification-service/: server.js
libs/benchmarks/projects/large/enterprise/services/payment-service/: server.js
libs/benchmarks/projects/large/enterprise/services/user-service/: server.js
libs/benchmarks/projects/large/microservices/: api-gateway.js  order-service.js  product-service.js  user-service.js
libs/benchmarks/projects/large/microservices/.pinpath/endpoints/: manifest.json
libs/benchmarks/projects/medium/.pinpath/endpoints/by-file/: express-mono-app.js.json  express-mono-routes-products.js.json  express-mono-routes-users.js.json
libs/benchmarks/projects/medium/.reqsmith/endpoints/: manifest.json
libs/benchmarks/projects/medium/.reqsmith/endpoints/by-file/: express-mono-routes-analytics.js.json  express-mono-routes-auth.js.json  express-mono-routes-orders.js.json  express-mono-routes-webhooks.js.json
libs/benchmarks/projects/medium/django-cms/: views.py
libs/benchmarks/projects/medium/django-cms/.reqsmith/endpoints/: manifest.json
libs/benchmarks/projects/medium/express-mono/: app.js  package.json
libs/benchmarks/projects/medium/express-mono/.pinpath/endpoints/: manifest.json
libs/benchmarks/projects/medium/express-mono/routes/: analytics.js  auth.js  webhooks.js
libs/benchmarks/projects/medium/laravel-shop/: ShopController.php
libs/benchmarks/projects/medium/laravel-shop/.reqsmith/endpoints/: manifest.json
libs/benchmarks/projects/small/.pinpath/endpoints/: manifest.json
libs/benchmarks/projects/small/.pinpath/endpoints/by-file/: express-api-src-routes-orders.js.json  mixed-stack-backend-routes-analytics.py.json
libs/benchmarks/projects/small/.reqsmith/endpoints/by-file/: express-api-src-routes-auth.js.json  express-api-src-routes-products.js.json  express-api-src-routes-users.js.json  flask-app-app.py.json  flask-app-routes-auth.py.json  flask-app-routes-orders.py.json  flask-app-routes-products.py.json  flask-app-routes-users.py.json
libs/benchmarks/projects/small/express-api/: package.json
libs/benchmarks/projects/small/express-api/.pinpath/endpoints/: manifest.json
libs/benchmarks/projects/small/express-api/.reqsmith/endpoints/: manifest.json
libs/benchmarks/projects/small/express-api/src/routes/: auth.js  orders.js  products.js  users.js
libs/benchmarks/projects/small/flask-app/: app.py  requirements.txt
libs/benchmarks/projects/small/flask-app/.pinpath/: .gitignore
libs/benchmarks/projects/small/flask-app/.reqsmith/endpoints/: manifest.json
libs/benchmarks/projects/small/flask-app/routes/: auth.py  orders.py  products.py  users.py
libs/benchmarks/projects/small/mixed-stack/: package.json
libs/benchmarks/projects/small/mixed-stack/backend/routes/: analytics.py
libs/benchmarks/src/: lib.rs  metrics.rs  reports.rs  scenarios.rs
libs/core/: Cargo.toml  project.json
libs/core/src/: lib.rs
libs/core/tests/: integration_tests.rs
libs/diff/: Cargo.toml  project.json
libs/diff/src/: git.rs  lib.rs  processor.rs  text.rs
libs/parser/: Cargo.toml  TESTING.md  project.json  test.sh
libs/parser/src/: incremental.rs  lib.rs
libs/parser/src/config/: detector.rs  generator.rs  mod.rs  patterns.rs  template.js
libs/parser/src/languages/: javascript.rs  php.rs  python.rs
libs/parser/tests/: integration_tests.rs
libs/parser/tests/fixtures/: README.md  test-scenarios.yml
libs/parser/tests/fixtures/go/gin/: basic-routes.go
libs/parser/tests/fixtures/javascript/express/: basic-routes.js  nested-routers.js  param-routes.js
libs/parser/tests/fixtures/php/laravel/: api-routes.php  basic-routes.php  controllers.php
libs/parser/tests/fixtures/python/fastapi/: basic-routes.py
libs/parser/tests/fixtures/python/flask/: basic-routes.py  methods.py
libs/parser/tests/fixtures/rust/axum/: basic-routes.rs
libs/parser/tests/issues/: mod.rs
libs/parser/tests/projects/: mod.rs
libs/parser/tests/projects/edge_cases/: mod.rs
libs/parser/tests/projects/performance/: mod.rs
libs/parser/tests/projects/single_app/: mod.rs
libs/parser/tests/projects/startup_monorepo/: mod.rs
libs/parser/tests/projects/startup_monorepo/express_dual/: README.md  mod.rs
libs/parser/tests/projects/startup_monorepo/mixed_tech/: README.md  mod.rs
libs/parser/tests/unit/: mod.rs
libs/parser/tests/unit/core/: mod.rs  project_analysis.rs
libs/parser/tests/unit/express/: config_generation.rs  detection.rs  mod.rs  patterns.rs
libs/parser/tests/unit/express/fixtures/basic_app/: app.js
libs/parser/tests/unit/fastapi/: detection.rs  mod.rs
libs/parser/tests/unit/flask/: config_generation.rs  detection.rs  mod.rs  patterns.rs
libs/parser/tests/unit/laravel/: detection.rs  mod.rs
libs/parser/tests/unit/nextjs/: config_generation.rs  detection.rs  mod.rs  patterns.rs
(+136 files in other folders)
