
[workspace]
resolver = '2'
members = [
	'libs/core',
	'libs/parser',
	'libs/diff',
	'apps/cli',
	'libs/benchmarks',
	'apps/desktop/src-tauri',
]

[package]
name = "reqsmith-debug"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "debug_projects"
path = "debug_projects.rs"

[dependencies]
walkdir = "2.0"

[workspace.package]
version = '0.1.0'
edition = '2021'
license = 'FSL-1.1-Apache-2.0'
authors = ['Reqsmith Team']

[workspace.dependencies]
tokio = { version = '1.38', features = ['full'] }
serde = { version = '1.0', features = ['derive'] }
anyhow = '1.0'
tracing = '0.1'
notify = '6.0'
tree-sitter = '0.20'
git2 = '0.18'
tauri = { version = '2.0', features = ['macos-private-api'] }
clap = { version = '4.5', features = ['derive'] }
tracing-subscriber = '0.3'
