[package]
name = "hallwatch-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "hallwatch"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
tokio.workspace = true
clap = { version = "4.0", features = ["derive"] }
tracing.workspace = true
tracing-subscriber = "0.3"
walkdir = "2.4"
serde_json = "1.0"
hallwatch-core = { path = "../../libs/core" }
hallwatch-parser = { path = "../../libs/parser" }
hallwatch-diff = { path = "../../libs/diff" }
