[package]
name = "reqsmith-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "reqsmith"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
tokio.workspace = true
clap = { version = "4.0", features = ["derive"] }
tracing.workspace = true
tracing-subscriber = "0.3"
walkdir = "2.4"
serde_json = "1.0"
reqsmith-core = { path = "../../libs/core" }
reqsmith-parser = { path = "../../libs/parser" }
reqsmith-diff = { path = "../../libs/diff" }
