[package]
name = "pinpath-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "pinpath"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
tokio.workspace = true
clap = { version = "4.0", features = ["derive"] }
tracing.workspace = true
tracing-subscriber = "0.3"
walkdir = "2.4"
serde_json = "1.0"
pinpath-core = { path = "../../libs/core" }
pinpath-parser = { path = "../../libs/parser" }
pinpath-diff = { path = "../../libs/diff" }
