[package]
name = "reqsmith-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
notify.workspace = true
tracing.workspace = true
serde.workspace = true
reqsmith-diff = { path = "../diff" }

[dev-dependencies]
tempfile = "3.8"
