[package]
name = "hallwatch-parser"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
regex = "1.10"
tree-sitter = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-python = "0.20"
tree-sitter-go = "0.20"
tree-sitter-rust = "0.21"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
hallwatch-diff = { path = "../diff" }
sha2 = "0.10"

[dev-dependencies]
tokio.workspace = true
tempfile = "3.8"
